@@ -4082,12 +4082,32 @@ gcry_error_t CallasDonnerhackeFinneyShawThayerRFC4880::AsymmetricSignDSA
 {
 	tmcg_byte_t buffer[2048];
 	gcry_sexp_t sigdata, signature;
-	gcry_mpi_t h;
+	gcry_mpi_t q, h;
+	unsigned int qbits = 0;
 	gcry_error_t ret;
-	size_t buflen = 0, erroff;
+	size_t buflen = 0, erroff, trunclen = 0;
 
+	// DSA signatures MUST use hashes that are equal in size to the number
+	// of bits of q, the group generated by the DSA key's generator value.
+	// If the output size of the chosen hash is larger than the number of
+	// bits of q, the hash result is truncated to fit by taking the number
+	// of leftmost bits equal to the number of bits of q.  This (possibly
+	// truncated) hash function result is treated as a number and used
+	// directly in the DSA signature algorithm.
+	ret = gcry_sexp_extract_param(key, NULL, "q", &q, NULL);
+	if (ret)
+		return ret;
+	qbits = gcry_mpi_get_nbits(q);
+	gcry_mpi_release(q);
+	if ((in.size() * 8) < qbits)
+		return GPG_ERR_BAD_PUBKEY;
+	trunclen = in.size();
+	while ((trunclen * 8) > qbits)
+		--trunclen;
+	if ((trunclen * 8) != qbits)
+		return GPG_ERR_BAD_PUBKEY;
 	memset(buffer, 0, sizeof(buffer));
-	for (size_t i = 0; ((i < in.size()) && (i < sizeof(buffer))); i++, buflen++)
+	for (size_t i = 0; ((i < in.size()) && (i < sizeof(buffer)) && (i < trunclen)); i++, buflen++)
 		buffer[i] = in[i];
 	ret = gcry_mpi_scan(&h, GCRYMPI_FMT_USG, buffer, buflen, NULL);
 	if (ret)
@@ -4138,6 +4158,8 @@ gcry_error_t CallasDonnerhackeFinneyShawThayerRFC4880::AsymmetricVerifyDSA
 	trunclen = in.size();
 	while ((trunclen * 8) > qbits)
 		--trunclen;
+	if ((trunclen * 8) != qbits)
+		return GPG_ERR_BAD_PUBKEY;
 	memset(buffer, 0, sizeof(buffer));
 	for (size_t i = 0; ((i < in.size()) && (i < sizeof(buffer)) && (i < trunclen)); i++, buflen++)
 		buffer[i] = in[i];
